# fros

./: README.md
src/clase1/: CMakeLists.txt  README.md  package.xml
src/clase1/launch/: multisim.launch.py  node_analysis.launch.py
src/clase2/: README.md  package.xml  setup.cfg  setup.py
src/clase2/launch/: counter_demo.launch.py
src/clase2/resource/: clase2
src/clase3/: CMakeLists.txt  README.md  package.xml
src/clase3/launch/: dp_launch.py
src/clase3/scripts/: static_tool_publisher.py  tf_sampler.py
src/clase4/: CMakeLists.txt  README.md  package.xml
src/clase4/launch/: dp_launch.py  dp_xacro.launch.py  mycobot.launch.py  robot_launch.py
src/clase4/scripts/: cinematica_dp.ipynb
src/clase5/: README.md  package.xml
src/clase5/config/: gazebo.config  ros2_controllers.yaml
src/clase5/launch/: dp_sim.launch.py  sim_launch.py
src/clase5/robot_description/mycobot_320_m5_2022/: mycobot_320_m5_2022.xacro
src/clase5/scripts/: gui_apply_torque.py
src/clase5/urdf/: dp.xacro  dp_convertido.sdf
src/clase5/worlds/: mundo_escritorio.world  mundo_obstaculos.world  mundo_suelo.world  mundo_vacio.world
src/clase6/: CMakeLists.txt  package.xml
src/clase6/config/: ros2_dp_controllers.yaml
src/clase6/launch/: dp_launch.py  mycobot_launch.py  sim_launch.py
src/clase6/scripts/: gui_control.py
src/clase6/worlds/: mundo_escritorio.world
src/clase7/: CMakeLists.txt  README.md  bringup_mycobot.sh  package.xml
src/clase7/config/: display.rviz  gazebo.config  plotjuggler_layout.xml  ros2_dp_controllers.yaml  ros2_mycobot_controllers.yaml
(+26 files in other folders)
